--- a/index.html
+++ b/index.html
@@ -56,23 +56,19 @@
   <!-- Page 1 -->
   <div class="page">
     <div class="header">
-      <div class="logo"><i class="la la-book"></i></div>
-      <div class="account"><i class="la la-user"></i></div>
-    </div>
-    <div class="dots">
-      <div class="circle"></div>
-      <div class="circle-a"></div>
-      <div class="circle"></div>
-    </div>
-    <div class="footer">
-      <div class="title">
+      <div class="logo">
         <div id="school-logo">school</div>
         <div id="project-logo">project</div>
       </div>
-      <div class="search">
-        <span>w</span>
-        <i class="la la-search"></i>
+      <div class="minor">
+        <div class="account active"><i class="la la-user"></i></div>
+        <div class="search"><i class="la la-search"></i></div>
       </div>
+    </div>
+    <div class="dots active">
+      <div class="circle"></div>
+      <div class="circle-a"></div>
+      <div class="circle"></div>
     </div>
   </div>
   <!-- /Page 1 -->
