--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
         <div class="search"><i class="la la-search"></i></div>
       </div>
     </div>
-    <div class="dots active">
-      <div class="circle"></div>
-      <div class="circle-a"></div>
-      <div class="circle"></div>
+    <div class="dots">
+      <div class="case">
+        <i class="la la-ellipsis-v"></i>
+      </div>
     </div>
   </div>
   <!-- /Page 1 -->
